[package]
name = "graph"
description = "Microsoft Graph provider for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time"] }
reqwest.workspace = true
chrono.workspace = true
base64.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
search = { path = "../search" }
seen = { path = "../seen" }
common = { path = "../common" }
label-colors = { path = "../label-colors" }
sync = { path = "../sync" }

# Crate-specific deps
log = "0.4"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
mail-parser = "0.11"
futures = "0.3"
urlencoding = "2"
getrandom = { version = "0.4.2", features = ["std"] }
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "db/hotpath", "store/hotpath", "search/hotpath", "seen/hotpath", "common/hotpath", "label-colors/hotpath", "sync/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "db/hotpath-alloc", "store/hotpath-alloc", "search/hotpath-alloc", "seen/hotpath-alloc", "common/hotpath-alloc", "label-colors/hotpath-alloc", "sync/hotpath-alloc"]
