[package]
name = "iced-drop"
description = "Vendored drag-and-drop widget for iced (from jhannyj/iced_drop)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
iced_core = { path = "/home/folk/Programs/sluggrs/repos/iced/core" }
iced_widget = { path = "/home/folk/Programs/sluggrs/repos/iced/widget", features = ["wgpu"] }
iced_runtime = { path = "/home/folk/Programs/sluggrs/repos/iced/runtime" }

[lints]
workspace = true
