[package]
name = "imap"
description = "IMAP provider for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "time"] }
reqwest.workspace = true
chrono.workspace = true
base64.workspace = true
rusqlite.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
search = { path = "../search" }
ratatoskr-seen-addresses = { path = "../seen-addresses" }
common = { path = "../provider-utils" }
smtp = { path = "../smtp" }
sync = { path = "../sync" }

# Crate-specific deps
log = "0.4"
async-trait = "0.1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.11"
utf7-imap = "0.3"
socket2 = "0.6"
regex = "1"
futures = "0.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
getrandom = { version = "0.2", features = ["std"] }
