[package]
name = "import"
description = "Contact import from CSV and vCard files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
encoding_rs = "0.8"
calcard = "0.3"
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
