[package]
name = "ratatoskr-inline-image-store"
description = "Inline image blob store for Ratatoskr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
log = "0.4"
serde.workspace = true
