[package]
name = "ratatoskr-jmap"
description = "JMAP provider for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time"] }
reqwest.workspace = true
chrono.workspace = true
base64.workspace = true

# Extracted workspace crates
ratatoskr-db = { path = "../db" }
ratatoskr-stores = { path = "../stores" }
ratatoskr-search = { path = "../search" }
ratatoskr-seen-addresses = { path = "../seen-addresses" }
ratatoskr-provider-utils = { path = "../provider-utils" }
ratatoskr-sync = { path = "../sync" }

# Crate-specific deps
log = "0.4"
async-trait = "0.1"
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures = "0.3"
rusqlite.workspace = true
sha2 = "0.10"
native-tls = "0.2"
uuid = { version = "1", features = ["v4"] }
