[package]
name = "jmap"
description = "JMAP provider for Ratatoskr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time"] }
reqwest.workspace = true
chrono.workspace = true
base64.workspace = true

# Extracted workspace crates
db = { path = "../db" }
store = { path = "../stores" }
search = { path = "../search" }
seen = { path = "../seen" }
common = { path = "../common" }
sync = { path = "../sync" }

# Crate-specific deps
log = "0.4"
async-trait = "0.1"
jmap-client = { path = "/home/folk/Programs/jmap-client", default-features = false, features = ["tls-native", "websockets", "mail", "calendars", "contacts"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures = "0.3"
rusqlite.workspace = true
sha2 = "0.11"
native-tls = "0.2"
uuid = { version = "1.23.1", features = ["v4"] }
hotpath = { workspace = true, optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath", "db/hotpath", "store/hotpath", "search/hotpath", "seen/hotpath", "common/hotpath", "sync/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "db/hotpath-alloc", "store/hotpath-alloc", "search/hotpath-alloc", "seen/hotpath-alloc", "common/hotpath-alloc", "sync/hotpath-alloc"]
